--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.24.3' # Specify a valid version number
+          flutter-version: '3.32.0' # Updated to match required SDK version ^3.5.4
           channel: stable
           architecture: x64
 
